# crypto_tax

./: .gitignore  README.md  preprocess_csv.ipynb  preprocess_files.ipynb  pyproject.toml  requirements.in  requirements.txt
ctax/: config.py  data.py  main.py  paths.py  transaction.py  utils.py
ctax/accounting/: balance.py  converter.py  finance.py
ctax/config/: config.py  config.yaml  paths.py
ctax/dataio/: __init__.py  loading.py  saving.py
ctax/preprocess/: bitpanda.py  kucoin.py  load.py  merge.py  ppfuncs.py  preprocessing.py  preprocessor.py  raw.py
ctax/preprocess/cex/: baseprocessor.py  bitpanda.py  kucoin.py
